# tinyfield

./: .travis.yml  Cargo.toml  LICENCE.txt  README.md  make_fields.py
src/: fields.rs  lib.rs  prime_field.rs  prime_power_field.rs
