[package]
name = "tinyfield"
version = "0.1.2"
authors = ["Robert Spencer <general@robertandrewspencer.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/rspencer01/tinyfield"
homepage = "https://github.com/rspencer01/tinyfield"
description = "Small, finite fields."
categories = ["mathematics", "no-std", "science"]
keywords = ["field"]
documentation = "https://docs.rs/crate/tinyfield/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
